# PlayWork

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: offline.html
app/src/main/jni/: DecryptMail.c  smime.c  smime.h
app/src/main/res/animator/: fragment_fade_in.xml  fragment_fade_out.xml  fragment_xfraction_in.xml  fragment_xfraction_out.xml  fragment_xfraction_pop_in.xml  fragment_xfraction_pop_out.xml
app/src/main/res/drawable/: add_task_selector.xml  backcolor.xml  bageview_back.xml  bg_chat_notes.xml  bg_progress.xml  bg_receive_window.xml  bg_send_window.xml  bottom_dotted_line.xml  bottom_line.xml  bottom_red_dotted_line.xml  calendar_date_selector.xml  change_color.xml  chat_bottom_line.xml  chat_choose_attachment_background.xml  chat_choose_file_background.xml  chat_choose_picture_background.xml  chat_emoji_button_background.xml  chat_list_avatar_bg.xml  chat_more_button_background.xml  chat_send_btn_selector.xml  chat_send_file_selector.xml  chat_send_mail_background.xml  chat_take_photo_background.xml  chat_voice_button_background.xml  chatfrom_bg_file.xml  chatfrom_bg_small_mail.xml  chatto_bg_file.xml  chatto_bg_small_mail.xml  chose_file_item_selector.xml  circle_background.xml  circle_point_black.xml  circle_point_gray.xml  circle_point_white.xml  circle_tab_guide_background.xml  click_date_background.xml  contact_cornerbg_5.xml  cursor_red.xml  (+65 more)
app/src/main/res/drawable-v21/: touchable_background_white.xml
(+545 files in other folders)
